# rutodo

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  movine.toml
migrations/2021-08-04-150203_add_timestamps_function/: up.sql
migrations/2021-08-04-150602_create_todo_lists/: down.sql  up.sql
migrations/2021-08-04-151415_create_todos/: up.sql
src/: app_logger.rs  config.rs  main.rs
src/db/: mod.rs  pgdb.rs
src/errors/: mod.rs  service.rs
src/filters/: mod.rs  with_pg_client.rs
src/graphql/: context.rs  errors.rs  mod.rs  schema.rs
src/graphql/models/: todo.rs  todo_list.rs
src/rest/: mod.rs  rejection.rs  todo_lists.rs  todos.rs  version.rs
src/rest/models/: mod.rs  todo_list.rs
src/todos/: mod.rs  todos.rs
src/todos/models/: mod.rs  todo.rs  todo_list.rs
src/todos/repos/: mod.rs  todo_lists.rs  todos.rs
