[package]
name = "rutodo"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4.0"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8"]}
deadpool-postgres = { version = "0.9" }

